dataset1235/2025-2/1153765216/users/594844958/executions/2747719322_2383239197.log
== SUBMISSION (2025-08-14 19:28:45)
-- CODE: 
import math as m

a = float(input())
b = float(input())
y = float(input())

distancia = m.sqrt((a**2) + (b**2) - (2*a*b*m.cos(y)))

print(round(distancia, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
17.79
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:35:10)
-- CODE: 
import math as m

a = float(input())
b = float(input())
y = float(input())

sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
distancia = m.sqrt(sem_raiz)

print(round(distancia, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y)))
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:35:02)
-- CODE: 
import math as m

a = float(input())
b = float(input())
y = float(input())

sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
distancia = m.sqrt(sem_raiz)

print(round(distancia, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 7
    sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(radians(y)))
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:35:33)
-- CODE: 
import math as m

a = float(input())
b = float(input())
y = float(input())

sem_raiz = (((a**2) + (b**2)) - (2*a*b*m.cos(m.radians(y))))
distancia = m.sqrt(sem_raiz)

print(round(distancia, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:28:36)
-- CODE: 
import math as m

a = float(input())
b = float(input())
y = float(input())

distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))

print(round(distancia, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))
                                                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))
                                                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))
                                                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))
                                                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))
                                                ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = m.sqrt((a**2) + (b**2) - (2*a*b*math.cos(y)))
                                                ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
